  * Moved the SDF module out of SessionSchedules and into lsl.common
  * Added functions to generate the TBN and DRX filter magnitude response
  * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
  * Added a basic SSMIF file for the north arm site (LWA-2)
  * Worked on trying to remove the memory leak in the DRX reader

0.4.4
  * Added an id number attribute to lsl.common.stations.FEE objects
  * Updated LWA-1 SSMIF to 2011-08-10 version

0.4.3
  * Cleaned up the various __init__.py scripts
  * Fixed a few typos in lsl.correlator.uvUtils
  * Fixed a typo in the progress bar caused some decrements to increment
  * Fixed a few typos in lsl.correlator.uvUtils.computeUVTrack
  * Fixed a typo in the _spec.PPSDC2() function that caused it to die
  * Fixed several heinous problems in sim.dp.pointSource()
  * Fixed a bug with indexing in the 4-bit TBW reader
  * Fixed a few sign errors in correlator _core and uvUtils modules
  * Fixed a bug in the correlateTBW script related to antenna indexing
  * Fixed a bug in the FITS IDI writer that caused EOP problems to be fatal

0.4.2
  * Fixed tbwSpectra.py to skip over non-TBW frames at the beginning of a TBW file
  * Fixed the common.stations.geo2ecef() conversion function (Ticket #16)
  * Fixed the correlator.fx.FXMaster() function (Ticket #18)
  * Fixed a few type conversion problems in correlator._core (core.c) introduced with the new data types
  * Fixed a frequency units conversion in tbnSpectra.py
  * Improved polarization support in the FITS IDI writer
  * Fixed a sign error in the fractional delay correction of the correlator F engine
  * Improved the speed of the X Engine
  * Fixed a azimuth definition problem in astro_array.c
  * Updated the included SSMIF to the 5/18/2011 version
  * Updated the correlateTBN script to make computing XX and YY products easier
  * Added support for different cable attenuation models supported in MCS0031, v5