@@ -1,8 +1,11 @@
 # -*- coding: utf-8 -*-
 
-"""lsl.misc - Miscellanous modules including:
- * mathutil   - math utilities that were part of the lwa_user package, 
- * geodesy    - module for retrieving earth orientation parameters, and 
- * beamformer - post data aquisition beam former for TBW and TBN data."""
+"""
+lsl.misc - Miscellanous modules including:
+ * mathutil     - math utilities that were part of the lwa_user package, 
+ * geodesy      - module for retrieving earth orientation parameters,
+ * beamformer   - post data aquisition beam former for TBW and TBN data, and
+ * dedispersion - incoherent dedispersion module.
+"""
 
 
