@@ -10,6 +10,7 @@
   * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
   * Added a basic SSMIF file for the north arm site (LWA-2)
   * Worked on trying to remove the memory leak in the DRX reader
+  * Added a preliminary module for incoherent dedispersion
 
 0.4.4
   * Added an id number attribute to lsl.common.stations.FEE objects
